--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
+    "particles-bg-vue": "^1.3.5",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
     "vue-router": "^3.1.6"
