--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "routing",
+  "name": "Portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@amcharts/amcharts4": "^4.9.19",
+    "@amcharts/amcharts4-fonts": "^4.0.1",
+    "@amcharts/amcharts4-geodata": "^4.1.14",
     "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
     "particles-bg-vue": "^1.3.5",
+    "save": "^2.4.0",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
     "vue-router": "^3.1.6"
