--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@amcharts/amcharts4": "^4.9.19",
     "@amcharts/amcharts4-fonts": "^4.0.1",
     "@amcharts/amcharts4-geodata": "^4.1.14",
+    "@emailjs/browser": "^3.6.2",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/vue-fontawesome": "^2.0.6",
     "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
+    "emailjs": "^3.8.1",
     "particles-bg-vue": "^1.3.5",
     "save": "^2.4.0",
     "vue": "^2.6.11",
